--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:denton.shannon7@gmail.com" class="email-link text-center">
+      <a href="mailto:denton.shannon7@gmail.com" class="email-link">
         denton.shannon7@gmail.com
       </a>
     </div>
