--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shannon</title>
+    <meta
+      name="description"
+      contact="Shannon Denton is a front-end developer based in the US, check out her projects and contact her for job opportunities."
+    />
+    <title>Frontend Developer Shannon</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Shannon</a>
+        <a class="navbar-brand" href="/">Shannon</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,15 +40,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Shannon Denton"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -54,15 +67,29 @@
     <h1 class="text-center">Shannon</h1>
     <h3 class="text-center">Front-end developer, based in Austin</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a
+        href="/about.html#contact"
+        class="primary-link"
+        title="Contact Shannon Denton"
+        >Contact me</a
+      >
+      <a
+        href="/about.html"
+        class="secondary-link"
+        title="Contact Shannon Denton"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" alt="yoga app" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            alt="yoga app"
+            class="img-fluid rounded d-none d-sm-block"
+          />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -71,12 +98,12 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link project-link">Launch Yoga App</a>
           </div>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -85,26 +112,26 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link project-link">Launch Weather App</a>
           </div>
         </div>
         <div class="col-6">
           <img
             src="images/weather.png"
             alt="weather app"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
             src="images/yogurt.png"
             alt="yogurt app"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -113,7 +140,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link project-link">Launch Weather App</a>
           </div>
         </div>
       </div>
